module/core/derive_tools/tests/inc/index/compiletime/struct_unit.rs
use derive_tools::Index;

#[ derive( Index ) ] 
struct StructUnit;

fn main()
{
  
}
